# qr

./: Cargo.toml  README.md  dependabot.yml
.github/: dependabot.yml
.github/workflows/: merge-dependabot-pr.yml  release.yaml
src/: cli.yaml  main.rs
