[package]
name = "qr"
version = "0.5.1"
edition = "2021"
description = "QR Code decoder / encoder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
encoding_rs = "0.8.33"
image = "0.24.7"
qrcode = "0.12.0"
rqrr = "0.6.0"

[profile.release]
codegen-units = 1
lto = true
strip = true
